-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8, 9
-
Component/s: client-libs
-
b65
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8084914 | emb-9 | Philip Race | P3 | Resolved | Fixed | team |
| JDK-8086911 | 8u65 | Philip Race | P3 | Resolved | Fixed | b01 |
| JDK-8078338 | 8u60 | Philip Race | P3 | Resolved | Fixed | b16 |
| JDK-8138150 | emb-8u65 | Unassigned | P3 | Resolved | Fixed | b01 |
| JDK-8081172 | emb-8u60 | Philip Race | P3 | Resolved | Fixed | team |
| JDK-8193979 | openjdk7u | Philip Race | P3 | Resolved | Fixed | master |
LittleCMS 2.7 was released one month ago. We should keep in sync
with the latest release which means upgrade JDK 9 to use it and backport to 8ux
with the latest release which means upgrade JDK 9 to use it and backport to 8ux
- backported by
-
JDK-8078338 Upgrade JDK to use LittleCMS 2.7
-
- Resolved
-
-
JDK-8081172 Upgrade JDK to use LittleCMS 2.7
-
- Resolved
-
-
JDK-8084914 Upgrade JDK to use LittleCMS 2.7
-
- Resolved
-
-
JDK-8086911 Upgrade JDK to use LittleCMS 2.7
-
- Resolved
-
-
JDK-8138150 Upgrade JDK to use LittleCMS 2.7
-
- Resolved
-
-
JDK-8193979 Upgrade JDK to use LittleCMS 2.7
-
- Resolved
-
(1 backported by)