8078331: Upgrade JDK to use LittleCMS 2.7

Reviewed-by: serb, bae